# code-mending

cmender/: .gitignore  build.gradle  gradle.properties  settings.gradle  test.c  test2.c  test_doom.c
cmender/gradle/wrapper/: gradle-wrapper.properties
cmender/src/main/resources/: diag_severity_mapping.json
cmender/src/test/resources/: invalid-diag-exporter
diag-exporter/: .gitignore  CMakeLists.txt  README.md  version
diag-exporter/examples/: Makefile  incompatible_types.c  missing_headers.c  missing_vars.c  recursive_macro_function.c  test.c
diag-exporter/src/: DiagnosticExporterAction.cpp  DiagnosticExporterAction.h  JsonDiagnosticConsumer.cpp  JsonDiagnosticConsumer.h  QualTypeJsonConverter.cpp  QualTypeJsonConverter.h  SourceBatchThreadAllocator.cpp  SourceBatchThreadAllocator.h  main.cpp
evaluation/: Makefile  eval.sh  evaluation.py  extract_tupatcher_include_path.py  run.sh
evaluation/src/: evaluation.py  extract_tupatcher_include_path.py  run_cmender.py
repos/: .gitignore  Makefile
repos/repos_output/dataset/: projects_info.json
repos/repos_output/details/: details_extraction.json  repos.csv
repos/repos_output/details/repo-details/: 0voice_cpp_new_features.json  0voice_introduce_c-cpp_manual.json  0xZ0F_Z0FCourse_ReverseEngineering.json  1technophile_OpenMQTTGateway.json  360Controller_360Controller.json  3proxy_3proxy.json  AFLplusplus_AFLplusplus.json  ARMmbed_mbed-os.json  AaronFeng753_Waifu2x-Extension-GUI.json  AdAway_AdAway.json  Aircoookie_WLED.json  AlexandreRouma_SDRPlusPlus.json  Alexays_Waybar.json  Alinshans_MyTinySTL.json  ApolloAuto_apollo.json  AppImage_AppImageKit.json  Ardour_ardour.json  ArduPilot_ardupilot.json  Arduino-IRremote_Arduino-IRremote.json  Atmosphere-NX_Atmosphere.json  AutoHotkey_AutoHotkey.json  Awesome-HarmonyOS_HarmonyOS.json  BVLC_caffe.json  BYVoid_OpenCC.json  BlackINT3_OpenArk.json  BlueMatthew_WechatExporter.json  Bodmer_TFT_eSPI.json  BoomingTech_Piccolo.json  CGAL_cgal.json  CMU-Perceptual-Computing-Lab_openpose.json  CTCaer_hekate.json  CameraKit_camerakit-android.json  Chikage0o0_Linux-NetSpeed.json  Cisco-Talos_clamav.json  ClickHouse_ClickHouse.json  (+965 more)
repos/repos_output/names/: name_extract.json  repo_names.txt
repos/src/: dataset_desc.py  dataset_prep.py  github.py  logger.py  repo_details_desc.py  repo_details_fetch.py  repo_names_fetch.py  repos_download.py
(+320 files in other folders)
